# highlighters

./: .gitignore
atom/language-passerine-textmate/: package.json
atom/language-passerine-textmate/grammars/: passerine.json
language-passerine-textmate/: README.md
language-passerine-textmate/spec/: language-passerine-spec.js  language-passerine-view-spec.js
tree-sitter-passerine/: .gitignore  Cargo.toml  LICENSE  binding.gyp  flake.nix  grammar.js  package.json
tree-sitter-passerine/queries/: highlights.scm
tree-sitter-passerine/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-passerine/test/corpus/: assignment.txt  functions.txt
vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/syntaxes/: passerine.tmLanguage.json  rust.json
